--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-  background: linear-gardient(#996680, #ad859a, #b894a6,#c2a3b3);
+  background: linear-gardient(rgb(153, 102, 128), rgb(194, 163, 179));
   background-size: cover;
   background-attachment: fixed;
   font-family: Helvetica, Arial, sans-serif;
