--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 
 h1, h2 {
   font-family: 'Gabriela', serif;
-  color: rgb(125, 54, 54);
+  color: fff;
 }
 
 h1 {
@@ -44,6 +44,7 @@ h3 {
   font-family: 'Gabriela', serif;
   font-size: 1.5em;
   margin-top: .5em;
+  color: rgb(125, 54, 54);
 }
 
 img {
